Fix - page layout cutoff issue18

--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -223,7 +223,7 @@
 
 @media (min-width: 1000px) {
   .dashboard-pg2-lgeo  {
-    width: 1200px;
+    width: 100%;
     display: inline-block;
     padding-left: 2%;
     padding-right: 2%;
@@ -246,7 +246,7 @@
 
 @media (min-width: 1000px) {
   .dashboard-pg3-lgeo  {
-    width: 1100px;
+    width: 100%;
     display: inline-block;
     padding-left: 2%;
     padding-right: 2%;
